# telos-vesting-contract

./: .env.template  .gitignore  LICENSE  README.md  config.js  package-lock.json  package.json
actions/: changevest.js  setconfig.js  transfer.js  withdraw.js
contract/: CMakeLists.txt  telosvesting.cpp  telosvesting.hpp
scripts/create_actions/: index.js
tests/: test.test.js
